# ForensIQ

./: .replit  ai_intelligence.py  app.py  auth.py  blockchain_forensics.py  cloud_forensics.py  cognitive_engine.py  comprehensive_test.py  comprehensive_test_results.json  core_forensics_engine.py  device_acquisition.py  encryption_analysis.py  forensic_tool_integrations.py  forensics.db  forensics_utils.py  init_database.py  live_remote_forensics.py  main.py  memory_analysis.py  migrate_database.py  mobile_iot_forensics.py  models.py  network_analysis.py  network_scanner.py  predator_reflex.py  pyproject.toml  quantum_contingency.py  real_forensics.py  replit.md  replit.nix  report_generator.py  requirements.txt  sandbox_analysis.py  search_regex.py  test_functionality.py  threat_intelligence.py  timeline_intelligence.py
agents/: base_agent.py  linux_agent.py  macos_agent.py  windows_agent.py
attached_assets/: Pasted--During-handling-of-the-above-exception-another-exception-occurred-Traceback-most-recent-call-la-1739191268573.txt  Pasted--Running-on-http-172-31-128-66-5000-INFO-werkzeug-Press-CTRL-C-to-quit-INFO-werkzeug-Restarti-1752447888970_1752447888971.txt  Pasted--extends-base-html-block-title-ForensIQ-Enterprise-Digital-Forensics-Platform-endbl-1752407400007_1752407400008.txt  Pasted--extends-base-html-block-title-Live-Dashboard-ForensIQ-endblock-block-conten-1752407420259_1752407420260.txt  Pasted--extends-base-html-block-title-Reports-Timeline-ForensIQ-endblock-block-c-1752422871583_1752422871584.txt  (+6 more)
blueprints/: agents.py  dashboard.py  federated.py  (+2 more)
(+41 files in other folders)
